--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@astrojs/rss": "4.0.11",
     "@astrojs/sitemap": "3.2.1",
     "astro": "5.1.3",
+    "iframe-resizer": "^5.3.3",
     "typescript": "5.7.2"
   },
   "devDependencies": {
